fix: unhide scrollbars by default

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -53,9 +53,7 @@
 body,
 html {
   overflow-x: hidden;
-  scrollbar-width: none;
   -ms-overflow-style: none;
-  overflow-x: hidden;
 }
 
 html {
